--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,10 @@ body {
 }
 
 .article img.article-img {
-  width: 50%;
+  width: 50vw;
+  max-width: 100%;
   height: auto;
   display: block;
   margin: 1.5rem auto;
 }
+
